<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="warningsigns">Warning Signs</string>
    <string name="copingstrategies">Coping Strategies</string>
    <string name="placesfordistraction">Places for Distraction</string>
    <string name="contacts">Contacts</string>
    <string name="professionals">Professionals</string>
    <string name="makingenvironmentsafe">Making Environment Safe</string>
    <string name="extranote">Other</string>
    <string name="reasontolive">Reasons to Live</string>
    <string name="warningsignsquestion">What sort of thoughts, images, moods, situations, or behaviors indicate to you that a crisis may be developing? (Ex. Urges to drink, sleeping more than usual, skipping responsibilities) </string>
    <string name="warningsignsenter">Warning signs: </string>
    <string name="copingstrategiesquestion">What are some things that you can do on your own to help you not act on thoughts / urges to harm yourself? (Ex. television, exercise, games)</string>
    <string name="copingstrategiesenter">Coping strategies: </string>
    <string name="socialsettingsquestion">What healthy social settings can help you take your mind off of things? (Ex. Local park, cousin’s place, coffee shop)</string>
    <string name="socialsettingsenter">Places: </string>
    <string name="enterfriendsfamily">Friends / Family whom I can ask for help</string>
    <string name="entercounselornumber">Enter Therapist\'s Phone Number:</string>
    <string name="entercontacts">Enter the names and numbers of friends, family, professionals, or other resources you can contact during a crisis. </string>
    <string name="enterpsychiatrist">Enter Psychiatrist\'s Phone Number: </string>
    <string name="enterextranote">Enter any other notes that may be helpful to you during a crisis.</string>
    <string name="environmentsafequestion">Have you thought of ways in which you might harm yourself? Develop a plan to limit your access to these means. (Ex. Remove firearms, keep only small amount of pills at home, remove alcohol) </string>
    <string name="environmentsafeenter">Enter ways to make your environment safe: </string>
    <string name="save">Save</string>
    <string name="worthlivingenter">Enter things that are important to you and worth living for: </string>
    <string name="call911">Call 911</string>
    <string name="callhelpline">Call Helpline</string>
    <string name="calltherapist">Call Therapist</string>
    <string name="callpsychiatrist">Call Psychiatrist</string>
    <string name="callfriendsfamily">Call Friends / Family</string>
    <string name="findlocalurgentcare">Find Urgent Care</string>
    <string name="findlocalemergencydepartments">Find Emergency Department</string>
    <string name="remindertoself">Reason to Live</string>
    <string name="worthlivingfor">Press the button above to add things that are worth living for</string>
    <string name="action_settings">Setting</string>
    <string name="app_name">Sui Safe</string>
    <string name="title_activity_editwarningsigns">Edit Warning Signs</string>
    <string name="title_activity_editcopingstrategies">Edit Coping Strategies</string>
    <string name="title_activity_editplacesfordistraction">Edit Places for Distraction</string>
    <string name="title_activity_editmakingenvironmentsafe">Edit Making Environment Safe</string>
    <string name="title_activity_editfriendsandfamily">Edit Friends and Family</string>
    <string name="title_activity_editprofessionals">Edit Professionals</string>
    <string name="title_activity_editreasontolive">Edit Reasons to Live</string>
    <string name="obtainpermission">Please obtain permission to call beforehand. </string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="ok">OK</string>
    <string name="emptyprofessionals">Press the button above to add professionals you can call during a crisis.</string>
    <string name="emptyfriendsfamily">Press the button above to add the names of friends and family you can call during a crisis. </string>
    <string name="emptycopingstrategies">Press the button above to add coping strategies.</string>
    <string name="emptymakingenvironmentsafe">Press the button above to add methods of making your environment safe. </string>
    <string name="emptywarningsigns">Press the button above to add warning signs that a crisis may occur. </string>
    <string name="emptyplacesfordistraction">Press the button above to add places that can distract you. </string>
    <string name="emptynotes">Press the button above to add any additional notes that could be helpful. </string>
    <string name="emptycontacts">Press the button above to add any people, professionals, or other numbers that you can contact. </string>
    <string name="emergency">Emergency</string>
    <string name="safetyplan">Safety Plan</string>
    <string name="instructionoptions">Suicidal thoughts can seem like they will last forever – but for many, these thoughts and feelings pass. Having a plan in place that can help guide you through difficult moments can make a difference and keep you safe. Below are various ways to fill out this safety plan. </string>
    <string name="option1">Option 1:  Work with Therapist</string>
    <string name="option2">Option 3: </string>
    <string name="option3">Option 2: </string>
    <string name="watchvideo">Watch Video</string>
    <string name="option1description">Ideally, the best way to develop this plan is to work jointly with your counselor or therapist. Bring this application to your next appointment and fill it out with them. </string>
    <string name="option2description">You can also press the button above to call the national suicide prevention lifeline and fill out the safety plan with the assistance of a Lifeline counselor. Once you reach a counselor, put the call on speakerphone and navigate back to this application. </string>
    <string name="option3description">You can also watch the above YouTube video and then fill out the safety plan on your own. </string>
    <string name="title_activity_first_launch">FirstLaunch</string>
    <string name="intro1">Struggling with thoughts of suicide?</string>
    <string name="intro2">A safety plan can help guide you through difficult moments.</string>
    <string name="introbutton">Get Started</string>
    <string name="prefpreviouslystarted">previouslystarted</string>
    <string name="instructionstextview">Press the ? icon in the upper right corner for instructions on how to fill out this safety plan. </string>
    <string name="guide">Guide</string>
    <string name="emergencynumber">911</string>
    <string name="hotlinename">988 Suicide and Crisis Lifeline</string>
    <string name="helplinenumber">988</string>
    <string name="suicidepreventiondesc">If you are suicidal, I want you to know that virtually every person that I have talked with who attempted suicide, and survived, was glad that they lived. So the emotions that were causing the suicidal feelings did pass. Things got better; the sun did come out. So, let me extend that hope to you.
\n\nPlease look at the Safety Plan module of this application. There, you can fill out a safety plan that can keep you safe during difficult times as well as find a list of helpful resources. Specifically, I want to encourage you to call the 988 Suicide and Crisis Lifeline. They are there to help you, even if you are not in a suicidal crisis.
</string>
    <string name="overview">Overview</string>
    <string name="coping">Coping</string>
    <string name="recovering">Recovering</string>
    <string name="usingsafetyplan">Using the Safety Plan</string>
    <string name="suicideprevention">Suicide Prevention</string>
    <string name="reasonstolive">Reasons to Live</string>
    <string name="resources">Resources</string>
    <string name="overviewdescription">If you are having thoughts of suicide, you are not alone. Many people have had suicidal thoughts at some point in their lives. Some problems and experiences can leave you feeling hopeless and overwhelmed. Feeling suicidal is not a sign of weakness, and it doesn\'t mean that you are weak or crazy. Thinking of suicide occurs when pain exceeds the resources for coping with that pain. You may think that you have no options left and suicide would be a way to escape intense emotional pain. But while this pain may seem overwhelming and permanent, with time and support, you can overcome your problems and the pain, as well as the suicidal feelings, will pass. \n\nTake hope in the fact that people DO get through this, even when they are feeling as badly as you do now. There is a very good chance that you are going to live through these feelings, no matter how much pain you are currently experiencing.
\n\nThis application is designed to support you and help you deal with your suicidal urges when they arise so that you may continue on the path to recovery. Please take the time to read this guide and fill out the Safety Plan. The Safety Plan will come in handy when you have thoughts of hurting yourself. Once it is completed, you can follow the steps outlined in your Safety Plan to cope with your emotional pain. If following the Safety Plan is not enough to alleviate your pain, you can call for help or find a local emergency center through the Crisis tab of the app.
</string>
    <string name="makingenvironmentsafedescription">It is critical to make your environment safe by removing things you could use to hurt yourself. Either remove them yourself or talk to a trusted friend or family member and have them remove objects such as guns, knives, razors, or pills. If you need pills regularly, your trusted friend or family member can give you the pills on an as-needed basis according to the prescription. If you have a specific plan in place, make sure to tell your trusted friend or family member about the plan so they can ensure your safety.
</string>
    <string name="coping1title">Promise not to do anything right now</string>
    <string name="coping1description">Even if you are in a lot of pain, give yourself some distance between thoughts and action. Make a promise to yourself. For example, "I won\'t do anything drastic in the next 24 hours." Or wait a week. Thoughts and actions are two different things. There\'s no deadline. Wait so you can put some distance between your thoughts and actions. </string>
    <string name="coping2title">Follow the Safety Plan</string>
    <string name="coping2description">Do activities that have helped you cope in the past, reflect on your reasons to live, go to a safe place to distract yourself, or contact friends / family / professionals. If this is not enough or not possible, go to the Emergency Tab and reach out for help.
</string>
    <string name="coping3title">Avoid dangerous substances / objects</string>
    <string name="coping3description">Suicidal thoughts can become even stronger when you have taken drugs or alcohol. In addition, remove yourself from places where you may have access to things that you can use to hurt yourself.
</string>
    <string name="coping4title">Reach out</string>
    <string name="coping4description">If you are worried that you may lose control or do something to hurt yourself, tell someone. Make sure you are around someone you trust.</string>
    <string name="coping5title">Do the opposite of how you feel</string>
    <string name="coping5description">When you have thoughts of suicide, it can be helpful to do the opposite of how you feel. For example, when people feel depressed they usually want to be alone. Doing the opposite can help with feelings of depression.
</string>
    <string name="coping6title">Problem-solve</string>
    <string name="textcrisistextline">Text Crisis Text Line</string>
</resources>